# nx-work-log

./: .buildinfo  .gitignore  Jenkinsfile  LICENSE.txt  MANIFEST.in  README.rst  _config.yml  genindex.html  index.html  index.md  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  tasks.py
.doctrees/: environment.pickle  index.doctree
.doctrees/autosummary/: nx_work_log.change_time_dialog.doctree  (+19 more)
_autosummary/: nx_work_log.html  nx_work_log.minute_timer.MinuteTimer.html  nx_work_log.minute_timer.html  nx_work_log.version.html
_sources/: index.rst.txt
autosummary/: nx_work_log.change_time_dialog.ChangeTimeDialog.html  nx_work_log.change_time_dialog.html  nx_work_log.html  nx_work_log.minute_timer.MinuteTimer.html  nx_work_log.minute_timer.html  nx_work_log.sys_tray_icon.SysTrayIcon.html  nx_work_log.sys_tray_icon.html  nx_work_log.sys_tray_icon.non_string_iterable.html  nx_work_log.version.html  nx_work_log.win_app.change_time_dialog_time_changed_callback.html  nx_work_log.win_app.exit.html  nx_work_log.win_app.html  nx_work_log.win_app.is_paused.html  nx_work_log.win_app.main.html  nx_work_log.win_app.minute_timer_callback.html  nx_work_log.win_app.on_exit.html  nx_work_log.win_app.on_startup.html  nx_work_log.win_app.pause_clicked.html  nx_work_log.win_app.reset_time.html  nx_work_log.win_app.show_change_time_dialog.html
doc/: conf.py  index.rst
nx_work_log/: NxWorkLog.py  change_time_dialog.py  minute_timer.py  nx_work_log.py  nx_work_log.rc  resource.h  sys_tray_icon.py  win_app.py
tests/: conftest.py  test_timer.py
(+23 files in other folders)
